added the ID to the path parameters during the update
